fixing picture alignment

--- a/Assets/css/pictures.css
+++ b/Assets/css/pictures.css
@@ -1,5 +1,5 @@
 .about-pic{
-    margin:2rem 1rem 1rem 1rem;
+    margin:2rem 2rem 1rem 2rem;
     width:30%;
     float:left;
 }
